Fix emoji panel on mobile

--- a/src/assets/stylesheets/ui-emoji.scss
+++ b/src/assets/stylesheets/ui-emoji.scss
@@ -12,6 +12,7 @@
   padding: 5px;
   background-color: $hud-panel-background;
   border-radius: 300px;
+  z-index: 2;
 }
 :local(.iconEmoji) {
   width: 30px;
